[package]
name = "rust-map-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bevy_ecs = "0.19.0"
bytes = "1.12.0"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures-util = "0.3.32"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.13"
sqlx = { version = "0.9.0", features = ["mysql", "tls-rustls", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
